--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "standard": "^17.1.0"
+    "standard": "^17.1.0",
+    "swagger-autogen": "^2.23.7"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
